tests/ui/traits/next-solver/object-projection-with-unsatisfied-bound-3.stderr
error[E0277]: the trait bound `dyn Callback<T>: Foo` is not satisfied
  --> $DIR/object-projection-with-unsatisfied-bound-3.rs:15:6
   |
LL |     <dyn Callback<dyn Callback<T>>>::call(());
   |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Foo` is not implemented for `dyn Callback<T>`
   |
help: this trait has no implementations, consider adding one
  --> $DIR/object-projection-with-unsatisfied-bound-3.rs:8:1
   |
LL | trait Foo {
   | ^^^^^^^^^

error[E0277]: the trait bound `dyn Callback<T>: Foo` is not satisfied
  --> $DIR/object-projection-with-unsatisfied-bound-3.rs:15:5
   |
LL |     <dyn Callback<dyn Callback<T>>>::call(());
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Foo` is not implemented for `dyn Callback<T>`
   |
help: this trait has no implementations, consider adding one
  --> $DIR/object-projection-with-unsatisfied-bound-3.rs:8:1
   |
LL | trait Foo {
   | ^^^^^^^^^

error[E0658]: use of unstable library feature `fn_traits`
  --> $DIR/object-projection-with-unsatisfied-bound-3.rs:15:5
   |
LL |     <dyn Callback<dyn Callback<T>>>::call(());
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #29625 <https://github.com/rust-lang/rust/issues/29625> for more information
   = help: add `#![feature(fn_traits)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0277]: the trait bound `dyn Callback<T>: Foo` is not satisfied
  --> $DIR/object-projection-with-unsatisfied-bound-3.rs:15:5
   |
LL |     <dyn Callback<dyn Callback<T>>>::call(());
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Foo` is not implemented for `dyn Callback<T>`
   |
help: this trait has no implementations, consider adding one
  --> $DIR/object-projection-with-unsatisfied-bound-3.rs:8:1
   |
LL | trait Foo {
   | ^^^^^^^^^

error[E0277]: expected a `FnMut<_>` closure, found `dyn Callback<dyn Callback<T>, Output = ()>`
  --> $DIR/object-projection-with-unsatisfied-bound-3.rs:15:6
   |
LL |     <dyn Callback<dyn Callback<T>>>::call(());
   |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected an `FnMut<_>` closure, found `dyn Callback<dyn Callback<T>, Output = ()>`
   |
   = help: within `dyn Callback<dyn Callback<T>, Output = ()>`, the trait `FnOnce(&_)` is not implemented for `dyn Callback<dyn Callback<T, Output = ()>, Output = ()>`
   = note: required because it appears within the type `dyn Callback<dyn Callback<T>, Output = ()>`
note: required by a bound in `call`
  --> $SRC_DIR/core/src/ops/function.rs:LL:COL

error[E0277]: expected a `FnOnce(&_)` closure, found `dyn Callback<dyn Callback<T>, Output = ()>`
  --> $DIR/object-projection-with-unsatisfied-bound-3.rs:15:5
   |
LL |     <dyn Callback<dyn Callback<T>>>::call(());
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected an `FnOnce(&_)` closure, found `dyn Callback<dyn Callback<T>, Output = ()>`
   |
   = help: the trait `FnOnce(&_)` is not implemented for `dyn Callback<dyn Callback<T>, Output = ()>`

error[E0061]: this function takes 2 arguments but 1 argument was supplied
  --> $DIR/object-projection-with-unsatisfied-bound-3.rs:15:5
   |
LL |     <dyn Callback<dyn Callback<T>>>::call(());
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ -- argument #1 of type `&dyn Callback<dyn Callback<T>, Output = ()>` is missing
   |
note: method defined here
  --> $SRC_DIR/core/src/ops/function.rs:LL:COL
help: provide the argument
   |
LL |     <dyn Callback<dyn Callback<T>>>::call(/* value */, ());
   |                                           ++++++++++++

error: aborting due to 7 previous errors

Some errors have detailed explanations: E0061, E0277, E0658.
For more information about an error, try `rustc --explain E0061`.
